WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147150
[ES6] Class parser does not allow methods named set and get.
https://bugs.webkit.org/show_bug.cgi?id=147150
Summary
[ES6] Class parser does not allow methods named set and get.
Oliver Hunt
Reported
2015-07-21 08:51:08 PDT
class Foo { set() {} }; and class Bar { get() {} } should both be valid method names, and yet are being rejected. The parser needs to check for a ( after the get/set pseudo-keywords rather than assuming it's always a setter or getter.
Attachments
Fixes the bug
(9.87 KB, patch)
2015-08-05 20:21 PDT
,
Ryosuke Niwa
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2015-08-05 20:21:12 PDT
Created
attachment 258344
[details]
Fixes the bug
Oliver Hunt
Comment 2
2015-08-05 20:41:24 PDT
Comment on
attachment 258344
[details]
Fixes the bug How hard would it be to factor out the property name parsing? Parsepropertyname()->{name, propertytype} R+ as is, but if so a follow up to refactor would be nice
Ryosuke Niwa
Comment 3
2015-08-05 20:48:58 PDT
Yup, I'm gonna try that refactoring after fixing the
bug 144281
.
Ryosuke Niwa
Comment 4
2015-08-05 20:50:02 PDT
(In reply to
comment #3
)
> Yup, I'm gonna try that refactoring after fixing the
bug 144281
.
I meant to say the
bug 142690
.
Ryosuke Niwa
Comment 5
2015-08-05 21:01:12 PDT
Committed
r188018
: <
http://trac.webkit.org/changeset/188018
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug